@@ -1,3 +1,10 @@
+2011-02-23  Xerxes Ranby  <xerxes@zafena.se>
+
+	* Makefile.am: (JAMVM_BASE_URL): Switch to using IcedTea
+	server for JamVM drops too.
+	(JAMVM_VERSION): Updated to latest JamVM revision.
+	(JAMVM_SHA256SUM): Updated.
+
 2011-02-23  Denis Lila  <dlila@redhat.com>
 
 	* Makefile.am: Added 2 patches.
